Adding code for fuzzing and test prioritisation

--- a/roles/install_jenkins/templates/security.groovy.j2
+++ b/roles/install_jenkins/templates/security.groovy.j2
@@ -12,4 +12,6 @@ def strategy = new hudson.security.FullControlOnceLoggedInAuthorizationStrategy(
 strategy.setAllowAnonymousRead(true)
 instance.setAuthorizationStrategy(strategy)
 
+hudson.model.DirectoryBrowserSupport.CSP = ""
+
 instance.save()
