--- a/roles/build_iTrust/templates/itrust_config.xml.j2
+++ b/roles/build_iTrust/templates/itrust_config.xml.j2
@@ -15,14 +15,39 @@
     <hudson.tasks.Shell>
       <command>pwd
 rm -rf iTrust2-v2
-git clone http://{{github_username}}:{{github_password}}@github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git
+git clone http://{{github_username}}:{{github_password}}@github.ncsu.edu/vmani2/iTrust2-v2.git
 ansible-playbook {{project_path}}/itrust_2.yml --vault-password-file {{project_path}}/vault_pass.txt
 cd iTrust2-v2/iTrust2
-mvn clean test verify checkstyle:checkstyle
+mvn process-test-classes
+cp pom.xml_temp pom.xml
+git add . 
+git commit -a -m "Initial commit before fuzzing"
+git checkout -B fuzzer
+mvn clean test 
 </command>
     </hudson.tasks.Shell>
   </builders>
   <publishers>
+	<hudson.plugins.jacoco.JacocoPublisher plugin="jacoco">
+      <execPattern>**/**.exec</execPattern>
+      <classPattern>**/classes</classPattern>
+      <sourcePattern>**/src/main/java</sourcePattern>
+      <changeBuildStatus>false</changeBuildStatus>
+      <inclusionPattern/>
+      <exclusionPattern/>
+      <maximumInstructionCoverage>0</maximumInstructionCoverage>
+      <minimumInstructionCoverage>0</minimumInstructionCoverage>
+      <maximumBranchCoverage>0</maximumBranchCoverage>
+      <minimumBranchCoverage>0</minimumBranchCoverage>
+      <maximumComplexityCoverage>0</maximumComplexityCoverage>
+      <minimumComplexityCoverage>0</minimumComplexityCoverage>
+      <maximumLineCoverage>0</maximumLineCoverage>
+      <minimumLineCoverage>0</minimumLineCoverage>
+      <maximumMethodCoverage>0</maximumMethodCoverage>
+      <minimumMethodCoverage>0</minimumMethodCoverage>
+      <maximumClassCoverage>0</maximumClassCoverage>
+      <minimumClassCoverage>0</minimumClassCoverage>
+    </hudson.plugins.jacoco.JacocoPublisher>
     <hudson.plugins.postbuildtask.PostbuildTask plugin="postbuild-task@1.8">
       <tasks>
         <hudson.plugins.postbuildtask.TaskProperties>
@@ -34,10 +59,25 @@ mvn clean test verify checkstyle:checkstyle
           </logTexts>
           <EscalateStatus>false</EscalateStatus>
           <RunIfJobSuccessful>false</RunIfJobSuccessful>
-          <script>ansible-playbook -i {{project_path}}/hosts {{project_path}}/itrust.yml --vault-password-file {{project_path}}/vault_pass.txt</script>
+          <script>cd iTrust2-v2/iTrust2
+node fuzz.js
+cd ~jenkins/jobs/iTrust_Fuzzer/builds
+javac FuzzAnalysis.java
+java FuzzAnalysis {{number_of_fuzz}}
+cat  {{number_of_fuzz}}/analysis.txt
+		  </script>
         </hudson.plugins.postbuildtask.TaskProperties>
       </tasks>
     </hudson.plugins.postbuildtask.PostbuildTask>
+	 <hudson.tasks.junit.JUnitResultArchiver plugin="junit@1.24">
+      <testResults>**/target/surefire-reports/*.xml</testResults>
+      <keepLongStdio>false</keepLongStdio>
+      <testDataPublishers>
+        <de.esailors.jenkins.teststability.StabilityTestDataPublisher plugin="test-stability@2.3"/>
+      </testDataPublishers>
+      <healthScaleFactor>1.0</healthScaleFactor>
+      <allowEmptyResults>false</allowEmptyResults>
+    </hudson.tasks.junit.JUnitResultArchiver>
   </publishers>
   <buildWrappers/>
 </project>
