--- a/roles/build_iTrust/templates/itrust_config.xml
+++ b/roles/build_iTrust/templates/itrust_config.xml
@@ -1,24 +1,45 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.1' encoding='UTF-8'?>
 <project>
   <actions/>
   <description></description>
   <keepDependencies>false</keepDependencies>
   <properties/>
-  <scm class="hudson.scm.NullSCM"/>
+  <scm class="hudson.plugins.git.GitSCM" plugin="git@3.8.0">
+    <configVersion>2</configVersion>
+    <userRemoteConfigs>
+      <hudson.plugins.git.UserRemoteConfig>
+        <url>http://github.ncsu.edu/vmani2/iTrust2-v2.git</url>
+        <credentialsId>git-credentialsId</credentialsId>
+      </hudson.plugins.git.UserRemoteConfig>
+    </userRemoteConfigs>
+    <branches>
+      <hudson.plugins.git.BranchSpec>
+        <name>*/master</name>
+      </hudson.plugins.git.BranchSpec>
+    </branches>
+    <doGenerateSubmoduleConfigurations>false</doGenerateSubmoduleConfigurations>
+    <submoduleCfg class="list"/>
+    <extensions/>
+  </scm>
   <canRoam>true</canRoam>
   <disabled>false</disabled>
   <blockBuildWhenDownstreamBuilding>false</blockBuildWhenDownstreamBuilding>
   <blockBuildWhenUpstreamBuilding>false</blockBuildWhenUpstreamBuilding>
-  <triggers/>
+  <triggers>
+    <com.cloudbees.jenkins.GitHubPushTrigger plugin="github@1.29.0">
+      <spec></spec>
+    </com.cloudbees.jenkins.GitHubPushTrigger>
+  </triggers>
   <concurrentBuild>false</concurrentBuild>
   <builders>
     <hudson.tasks.Shell>
-      <command>pwd
-rm -rf iTrust2-v2
-git clone http://ajagana:A0s9d8f7@github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git
-ansible-playbook /home/ubuntu/proj2/itrust_2.yml --vault-password-file /home/ubuntu/proj2/vault_pass.txt
-cd iTrust2-v2/iTrust2
-mvn clean test verify checkstyle:checkstyle
+      <command>ansible-playbook /home/ubuntu/DevOps_Project/itrust_2.yml --vault-password-file /home/ubuntu/DevOps_Project/vault_pass.txt
+cd iTrust2
+cp pom.xml pom.xml_temp
+cp pom_data.xml pom.xml
+mvn process-test-classes
+cp pom.xml_temp pom.xml
+mvn clean test 
 </command>
     </hudson.tasks.Shell>
   </builders>
@@ -34,7 +55,7 @@ mvn clean test verify checkstyle:checkstyle
           </logTexts>
           <EscalateStatus>false</EscalateStatus>
           <RunIfJobSuccessful>false</RunIfJobSuccessful>
-          <script>ansible-playbook -i /home/ubuntu/proj2/hosts /home/ubuntu/proj2/itrust.yml --vault-password-file /home/ubuntu/proj2/vault_pass.txt</script>
+          <script>ansible-playbook -i /home/ubuntu/DevOps_Project/hosts /home/ubuntu/DevOps_Project/itrust.yml --vault-password-file /home/ubuntu/DevOps_Project/vault_pass.txt</script>
         </hudson.plugins.postbuildtask.TaskProperties>
       </tasks>
     </hudson.plugins.postbuildtask.PostbuildTask>
