Updated to include iTrust deployment

--- a/roles/build_iTrust/templates/credentials.xml
+++ b/roles/build_iTrust/templates/credentials.xml
@@ -3,5 +3,5 @@
 	<id>git-credentialsId</id>
 	<description></description>
 	<username>ajagana</username>
-	<password>A0s9d8f7</password>
+	<password>1L2k3j4h</password>
 </com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl>
